# image_processor__skeleton1

./: CMakeLists.txt  main.cpp
googletest-master/googlemock/docs/: cheat_sheet.md  cook_book.md
googletest-master/googlemock/include/gmock/: gmock-generated-matchers.h  gmock-generated-matchers.h.pump  gmock-matchers.h
googletest-master/googlemock/src/: gmock-matchers.cc
googletest-master/googletest/docs/: advanced.md
googletest-master/googletest/include/gtest/: gtest-matchers.h  gtest.h
googletest-master/googletest/include/gtest/internal/: gtest-internal.h
googletest-master/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc
googletest-master/googletest/test/: BUILD.bazel
include/: bitmap.h  improc.hpp
src/: bitmap.c  improc.cpp
